<resources>
    <string name="app_name">RamkumarTextiles</string>
    <string name="login">Employee Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_out">Sign Out</string>
    <string name="logout">Logout</string>
    <string name="register_user">Register User</string>
    <string name="login_user">Login User</string>
    <string name="company_owners">Company Login</string>
    <string name="owners">Owners</string>
    <string name="password_confirm">Password(Confirm)</string>
    <string name="assign_task">Assign Task</string>
    <string name="submit">Submit</string>
    <string name="complete_by">Complete By</string>
    <string name="task_description">Task Description</string>
    <string name="employee_username">Employee Username</string>
    <string name="task">Task</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="PREF_KEY_CURRENT_USER_NAME">PREF_KEY_CURRENT_USER_NAME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed_on">Completed On</string>
    <string name="employee">Employees</string>

</resources>
