<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ToDoActivity"
        android:orientation="vertical">

   <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:layout_weight="0.08"
   android:background="@color/colorPrimary">

       <Button
               android:text="@string/logout"
               android:background="@drawable/button_design"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/logout"
               android:layout_marginRight="8dp"
               android:layout_alignParentRight="true"
               android:layout_centerVertical="true" tools:ignore="RelativeOverlap,RtlHardcoded"/>
       <TextView
               android:text="TextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/textView"
               android:gravity="center"
               android:textSize="25sp"
               android:layout_alignParentLeft="true"
               android:textColor="#000000"
               android:layout_centerVertical="true"
               android:layout_alignParentStart="true"
               android:layout_marginLeft="8dp"
               android:layout_marginStart="8dp"
               tools:ignore="HardcodedText"/>

   </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"

        >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:text="@string/status"
                  android:gravity="left|center"
                  android:paddingLeft="8dp"
                  android:layout_weight="0.2"
                  android:background="@color/colorPrimaryLight"
                  android:textColor="#000000"
                  android:textAllCaps="true"
                  android:layout_gravity="center"
                  tools:ignore="NestedWeights,RtlHardcoded" android:textSize="15sp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:text="@string/description"
                  android:gravity="center"
                  android:textColor="#000000"
                  android:background="@color/colorPrimaryLight"
                  android:layout_gravity="center"
                  android:layout_weight="0.5"
                  android:textAllCaps="true"
                  android:textSize="15sp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:text="@string/complete_by"
                  android:gravity="right|center"
                  android:background="@color/colorPrimaryLight"
                  android:paddingRight="8dp"
                  android:textColor="#000000"
                  android:textAllCaps="true"
                  android:layout_gravity="center"
                  android:layout_weight="0.3"
                  tools:ignore="RtlHardcoded" android:textSize="15sp"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
           />
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:layout_gravity="center"
            android:text="@string/update"
            android:id="@+id/updateTask"
            android:background="@drawable/button_design2"
            android:gravity="center"
    />


</LinearLayout>