<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity"
        android:padding="8dp">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/etUsernameL"
            android:background="@drawable/edittext_design"
            android:padding="8dp"
            android:hint="@string/username" android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" tools:ignore="Autofill"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/email"
            android:ems="10"
            android:padding="8dp"
            android:background="@drawable/edittext_design"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/emailL"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsernameL"
            tools:ignore="Autofill,TextFields"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/edittext_design"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/etPasswordL"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/emailL"
            android:hint="@string/password"
            tools:ignore="Autofill,TextFields"/>

    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/login"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordL"
            app:layout_constraintHorizontal_bias="0.498"/>

    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/textile_img1"
               android:layout_marginBottom="0dp"
               app:layout_constraintBottom_toTopOf="@+id/guideline3"
               android:foregroundGravity="bottom" tools:ignore="ContentDescription"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.18"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline8"
            app:layout_constraintGuide_percent="0.27"
            android:orientation="horizontal"/>

    <TextView
            android:text="@string/login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>