<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".fragment.AssignTaskFrag">

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/employee_name"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="0dp"
            android:background="@drawable/edittext_design"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline11"/>


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/desc"
            android:layout_marginTop="30dp"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/employee_name"
            android:hint="@string/task_description"
            android:background="@drawable/edittext_design"
            android:padding="8dp"
            tools:ignore="TextFields" android:autofillHints="" tools:targetApi="o"/>
    <Button
            android:text="@string/complete_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:padding="8dp"
            android:background="@drawable/button_design"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/desc"
            android:layout_marginLeft="8dp"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/submitTask"
            android:background="@drawable/button_design"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintHorizontal_bias="0.498"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline11"
            app:layout_constraintGuide_percent="0.25"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline12"
            app:layout_constraintGuide_percent="0.10"
            android:orientation="horizontal"/>

    <TextView
            android:text="@string/assign_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline12"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tV_dateA"
            android:background="@drawable/edittext_design"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/date"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/date"
            app:layout_constraintBottom_toBottomOf="@+id/date"/>


</androidx.constraintlayout.widget.ConstraintLayout>