<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/text_img2">

    <Button
            android:text="@string/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/butt_login"
            app:layout_constraintHorizontal_bias="0.498"
            android:background="@drawable/button_design"
            android:layout_marginTop="0dp" app:layout_constraintTop_toTopOf="@+id/guideline2"/>
    <Button
            android:text="@string/register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/butt_register"
            app:layout_constraintHorizontal_bias="0.498"
            android:background="@drawable/button_design"
            android:layout_marginTop="0dp" app:layout_constraintTop_toTopOf="@+id/guideline9"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline" app:layout_constraintGuide_percent="0.35"
                                                android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline9" app:layout_constraintGuide_percent="0.6"
            android:orientation="horizontal"/>
    <Button
            android:text="@string/company_owners"
            android:background="@drawable/button_design"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/butt_owners" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"/>


</androidx.constraintlayout.widget.ConstraintLayout>