<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".owners.views.activity.ownersLogIn"
        android:padding="8dp">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/etUsernameO"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline11"
            android:hint="@string/username"
            android:background="@drawable/edittext_design"
            android:padding="8dp"
            tools:ignore="Autofill"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/etPasswordO"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsernameO"
            android:hint="@string/password"
            android:background="@drawable/edittext_design"
            android:padding="8dp"
            tools:ignore="Autofill,TextFields"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/logino"
            android:background="@drawable/button_design"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordO"
            app:layout_constraintHorizontal_bias="0.498"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/textile_img1"
            android:foregroundGravity="bottom"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10" tools:ignore="ContentDescription"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10"
            app:layout_constraintGuide_percent="0.18"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline11"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline12"
            app:layout_constraintGuide_percent="0.27"
            android:orientation="horizontal"/>

    <TextView
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline12"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" tools:ignore="HardcodedText"/>


</androidx.constraintlayout.widget.ConstraintLayout>