<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewmodel"
                type="com.example.todolist_ramkumartextiles.auth.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".auth.views.RegisterActivity"
            android:padding="8dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/etUsernameR"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="@+id/guideline11"
                android:text="@={viewmodel.username}"
                android:hint="@string/username"
                android:background="@drawable/edittext_design"
                android:padding="8dp"
                tools:ignore="Autofill"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:background="@drawable/edittext_design"
                android:padding="8dp"
                android:id="@+id/emailR"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameR"
                android:hint="@string/email"
                android:text="@={viewmodel.email}"
                tools:ignore="Autofill,TextFields"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@drawable/edittext_design"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/etPasswordR"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/emailR"
                android:hint="@string/password"
                android:text="@={viewmodel.p1}"
                tools:ignore="Autofill"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@drawable/edittext_design"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/etPasswordRR"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordR"
                android:hint="@string/password_confirm"
                android:text="@={viewmodel.p2}"
                tools:ignore="Autofill"/>
        <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/register"
                android:background="@drawable/button_design"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordRR"
                app:layout_constraintHorizontal_bias="0.498"/>

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="bottom"
                android:src="@drawable/textile_img1"
                app:layout_constraintBottom_toTopOf="@+id/guideline10"
                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="8dp" />

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline10"
                app:layout_constraintGuide_percent="0.18"
                android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline11"
                app:layout_constraintGuide_percent="0.4"
                android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline12"
                app:layout_constraintGuide_percent="0.27"
                android:orientation="horizontal"/>

        <TextView
                android:text="@string/register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"/>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
